# algolabra

./: .clang-format  .gitignore  BUGS.md  CMakeLists.txt  NOTES.md  README.md  TODO.md  brun.sh  compile_commands.json  maarittelydokumentti.md
.cache/clangd/index/: main.cpp.4CF6768FDA4DEF78.idx
assets/entities/: carnivore.entity  herbivore.entity  plant.entity
development/: BACKLOG.md  BUGS.md  NOTES.md
docs/: viikkoraporti2.md  viikkoraportti1.md  viikkoraportti4.md
include/: entity.hpp  globals.hpp  render.hpp  runtime.hpp  world.hpp
src/: CMakeLists.txt  globals.hpp  main.cpp
src/behavior/: behavior.hpp
src/components/: behavior_component.cpp  behavior_component.hpp  component.hpp  component_storage.cpp  component_storage.hpp  coordinate_component.cpp  coordinate_component.hpp  entity_component.cpp  entity_component.hpp  mind_component.cpp  mind_component.hpp  render_component.cpp  render_component.hpp
src/entity/: animal.hpp  carnivore.hpp  component.hpp  entity.hpp  entity_creators.cpp  entity_creators.hpp  entity_storage.cpp  entity_storage.hpp  habitat.cpp  habitat.hpp  herbivore.hpp  plant.hpp  system.hpp
src/neural/: layer.cpp  layer.hpp  neural_net.cpp  neural_net.hpp  neural_utils.hpp  sense.hpp
src/render/: render.cpp  render.hpp  render_component.hpp  render_manager.cpp  render_manager.hpp  render_utils.cpp  render_utils.hpp
src/runtime/: debuggable.cpp  debuggable.hpp  engine.hpp  runtime.cpp  runtime.hpp  systems_manager.cpp  systems_manager.hpp
src/systems/: behavior_system.cpp  behavior_system.hpp  coordinate_system.cpp  coordinate_system.hpp  entity_system.cpp  entity_system.hpp  mind_system.cpp  mind_system.hpp  render_system.cpp  render_system.hpp  system.hpp  system_utils.cpp  system_utils.hpp
src/world/: cell.cpp  cell.hpp  entity.hpp  population.hpp  terrain.cpp  terrain.hpp  world.cpp  world.hpp  world_utils.cpp  world_utils.hpp
tests/: CMakeLists.txt
tests/world/: population_test.cpp
